<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/Expression"
        style="@style/expression" />

    <LinearLayout style="@style/LinearLine">

        <LinearLayout
            android:id="@+id/btnEquals"
            style="@style/Btn"
            android:background="@color/colorPrimary">

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

            <TextView
                style="@style/BtnCentral"
                android:text="@string/equalsText" />

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

        </LinearLayout>

        <TextView
            android:id="@+id/Answer"
            style="@style/answer"
            android:textIsSelectable="true"
            app:autoSizeMaxTextSize="14pt"
            app:autoSizeMinTextSize="8pt"
            app:autoSizeStepGranularity="2pt"
            app:autoSizeTextType="uniform" />
    </LinearLayout>

    <LinearLayout style="@style/LinearLine">

        <LinearLayout
            android:id="@+id/btnLeft"
            style="@style/Btn">

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

            <TextView
                style="@style/BtnCentral"
                android:text="@string/leftText" />

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnRight"
            style="@style/Btn">

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

            <TextView
                style="@style/BtnCentral"
                android:text="@string/rightText" />

            <TextView
                style="@style/BtnSwipe"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnClear"
            style="@style/Btn">

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

            <TextView
                style="@style/BtnCentral"
                android:text="@string/clearText" />

            <TextView
                style="@style/BtnSwipe"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnDel"
            style="@style/Btn"
            android:background="@color/operationsBtnsBrighterColor">

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

            <TextView
                style="@style/BtnCentral"
                android:text="@string/delText" />

            <TextView
                style="@style/BtnSwipe"
                android:text="" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/LinearLine">

        <LinearLayout
            android:id="@+id/btnOne"
            style="@style/Btn">

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

            <TextView
                style="@style/BtnCentral"
                android:text="@string/oneText" />

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnTwo"
            style="@style/Btn">

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

            <TextView
                style="@style/BtnCentral"
                android:text="@string/twoText" />

            <TextView
                style="@style/BtnSwipe"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnThree"
            style="@style/Btn">

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

            <TextView
                style="@style/BtnCentral"
                android:text="@string/threeText" />

            <TextView
                style="@style/BtnSwipe"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnDiv"
            style="@style/Btn"
            android:background="@color/operationsBtnsColor">

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

            <TextView
                style="@style/BtnCentral"
                android:text="@string/divText" />

            <TextView
                style="@style/BtnSwipe"
                android:text="" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/LinearLine">

        <LinearLayout
            android:id="@+id/btnFour"
            style="@style/Btn">

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

            <TextView
                style="@style/BtnCentral"
                android:text="@string/fourText" />

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnFive"
            style="@style/Btn">

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

            <TextView
                style="@style/BtnCentral"
                android:text="@string/fiveText" />

            <TextView
                style="@style/BtnSwipe"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnSix"
            style="@style/Btn">

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

            <TextView
                style="@style/BtnCentral"
                android:text="@string/sixText" />

            <TextView
                style="@style/BtnSwipe"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnMult"
            style="@style/Btn"
            android:background="@color/operationsBtnsColor">

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

            <TextView
                style="@style/BtnCentral"
                android:text="@string/multText" />

            <TextView
                style="@style/BtnSwipe"
                android:text="" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/LinearLine">

        <LinearLayout
            android:id="@+id/btnSeven"
            style="@style/Btn">

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

            <TextView
                style="@style/BtnCentral"
                android:text="@string/sevenText" />

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnEight"
            style="@style/Btn">

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

            <TextView
                style="@style/BtnCentral"
                android:text="@string/eightText" />

            <TextView
                style="@style/BtnSwipe"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnNine"
            style="@style/Btn">

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

            <TextView
                style="@style/BtnCentral"
                android:text="@string/nineText" />

            <TextView
                style="@style/BtnSwipe"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnSub"
            style="@style/Btn"
            android:background="@color/operationsBtnsColor">

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

            <TextView
                style="@style/BtnCentral"
                android:text="@string/minText" />

            <TextView
                style="@style/BtnSwipe"
                android:text="" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/LinearLine">

        <LinearLayout
            android:id="@+id/btnBraces"
            style="@style/Btn">

            <TextView
                style="@style/BtnSwipe"
                android:text="@string/bracesUpText" />

            <TextView
                style="@style/BtnCentral"
                android:text="@string/parenText" />

            <TextView
                style="@style/BtnSwipe"
                android:text="@string/bracesDownText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnZero"
            style="@style/Btn">

            <TextView
                style="@style/BtnSwipe"
                android:text="@string/zeroUpText" />

            <TextView
                style="@style/BtnCentral"
                android:text="@string/zeroText" />

            <TextView
                style="@style/BtnSwipe"
                android:text="@string/zeroDownText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnDot"
            style="@style/Btn">

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

            <TextView
                style="@style/BtnCentral"
                android:text="@string/dotText" />

            <TextView
                style="@style/BtnSwipe"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnAdd"
            style="@style/Btn"
            android:background="@color/operationsBtnsColor">

            <TextView
                style="@style/BtnSwipe"
                android:text="" />

            <TextView
                style="@style/BtnCentral"
                android:text="@string/addText" />

            <TextView
                style="@style/BtnSwipe"
                android:text="" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>